tests/ui/field_projections/incoherent-impl.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/incoherent-impl.rs:14:1
   |
LL | impl extern_crate::ForeignTrait for field_of!(Point, x) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------------------
   |                                     |
   |                                     `Point` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/incoherent-impl.rs:24:1
   |
LL | impl ForeignTrait for field_of!(Player, pos.x) {}
   | ^^^^^^^^^^^^^^^^^^^^^^------------------------
   |                       |
   |                       `Point` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/incoherent-impl.rs:33:1
   |
LL | impl ForeignTrait for field_of!((usize, usize), 0) {}
   | ^^^^^^^^^^^^^^^^^^^^^^----------------------------
   |                       |
   |                       this is not defined in the current crate because tuples are always foreign
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0117`.
